# reflex-mui-datagrid

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: api.md
examples/datagrid_demo/: .gitignore  pyproject.toml  rxconfig.py
examples/datagrid_demo/datagrid_demo/: __init__.py  cli.py  datagrid_demo.py  reflex-mui-datagrid.code-workspace
examples/datagrid_demo/datagrid_demo/data/: antku_small.vcf
src/reflex_mui_datagrid/: UnlimitedDataGrid.js  __init__.py  cli.py  datagrid.py  lazyframe_grid.py  models.py  polars_bio_utils.py  polars_utils.py
