[project]
name = "reflex-mui-datagrid"
version = "0.1.0"
description = "Reflex wrapper for the MUI X DataGrid (v8) React component with polars LazyFrame support"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.0",
    "reflex>=0.8.26",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["examples/*"]

[dependency-groups]
dev = ["polars-bio>=0.20.1"]
