[project]
name = "reflex-mui-datagrid"
version = "0.1.5"
description = "Reflex wrapper for the MUI X DataGrid (v8) React component with polars LazyFrame support"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.37.1",
    "reflex>=0.8.26",
    "typer>=0.23.1",
]

[project.scripts]
reflex-mui-datagrid = "reflex_mui_datagrid.cli:main"
biogrid = "reflex_mui_datagrid.cli:main"

[project.optional-dependencies]
bio = ["polars-bio>=0.23.0; python_version < '3.15'"]

[build-system]
requires = ["uv_build>=0.9.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["examples/*"]

[tool.uv.sources]
datagrid-demo = { workspace = true }

[dependency-groups]
dev = ["reflex-mui-datagrid[bio]", "datagrid-demo"]
