[project]
name = "datagrid-demo"
version = "0.1.0"
description = "Example Reflex app demonstrating reflex-mui-datagrid with polars LazyFrame and VCF data"
requires-python = ">=3.12"
dependencies = [
    "reflex-mui-datagrid",
    "polars-bio>=0.20.1",
]

[tool.uv.sources]
reflex-mui-datagrid = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
