[project]
name = "datagrid-demo"
version = "0.1.1"
description = "Example Reflex app demonstrating reflex-mui-datagrid with polars LazyFrame and VCF data"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "reflex-mui-datagrid[bio]",
]

[project.scripts]
demo = "datagrid_demo.cli:main"

[tool.uv.sources]
reflex-mui-datagrid = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
